--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.3.0",
     "@astrojs/check": "^0.4.1",
+    "astro": "^4.3.0",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^9.1.0"
   }
 }
